--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="{{ asset('css/nouislider.min.css') }}">
     <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/dataTables.bootstrap4.css') }}">
     {% block stylesheets %}{% endblock %}
 </head>
 
@@ -207,6 +208,8 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWMV3NCFOljPkak8aDSp9Bazg30_Nkt8o"></script>
 <script src="{{ asset('js/gmaps.min.js') }}"></script>
 <script src="{{ asset('js/main.js') }}"></script>
+<script src="{{ asset('js/datatables.min.js') }}"></script>
+<script src="{{ asset('js/dataTables.bootstrap4.js') }}"></script>
 {% block javascripts %}
 {% endblock %}
 </body>
