--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
     <h1>Users List</h1>
-    <label>Search name:<input type="search" onkeyup="myFunction()" name="searchtable" id="searchtable" class="form-control form-control-sm search" placeholder="" aria-controls="dataTable"></label>
     <table class="table" id="dataTable">
         <thead>
             <tr>
@@ -45,33 +44,12 @@
         </tbody>
     </table>
     <a href="{{ path('user_new') }}" class="btn btn-primary">Create new</a>
-    <div class="pagination active">
-        {{ knp_pagination_render(users) }}
-    </div>
 {% endblock %}
 
 {% block javascripts %}
     <script>
-        function myFunction() {
-            // Declare variables
-            var input, filter, table, tr, td, i, txtValue;
-            input = document.getElementById("searchtable");
-            filter = input.value.toUpperCase();
-            table = document.getElementById("dataTable");
-            tr = table.getElementsByTagName("tr");
-
-            // Loop through all table rows, and hide those who don't match the search query
-            for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[1];
-                if (td) {
-                    txtValue = td.textContent || td.innerText;
-                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                        tr[i].style.display = "";
-                    } else {
-                        tr[i].style.display = "none";
-                    }
-                }
-            }
-        }
-    </script>
+        $(document).ready( function () {
+            $('#dataTable').DataTable();
+        } );
+     </script>
 {% endblock %}
