--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -15,6 +15,9 @@
         {% endblock %}
     </title>
 
+    <link rel="stylesheet" href="{{ asset('css/dataTables.bootstrap4.css') }}">
+
+
     <!-- Custom fonts for this template-->
     <link href="{{ asset('vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
 
@@ -155,6 +158,10 @@
 
 <!-- Custom scripts for all pages-->
 <script src="{{ asset('js/sb-admin.min.js') }}"></script>
+<script src="{{ asset('js/datatables.min.js') }}"></script>
+<script src="{{ asset('js/dataTables.bootstrap4.js') }}"></script>
+
+
 
 {% block javascripts %}
 {% endblock %}
