--- a/templates/admin/home_admin.html.twig
+++ b/templates/admin/home_admin.html.twig
@@ -74,7 +74,11 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Earnings</div>
+                                {% if somme > 0 %}
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">{{ somme }} $</div>
+                                {% else %}
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">0 $</div>
+                                {% endif %}
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
