star counting fix + admin design changes

--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Article index{% endblock %}
 
 {% block body %}
-    <h1>Article index</h1>
+    <h1><li class="fas fa-luggage-cart"></li> Article index</h1>
     <table class="table" id="dataTable">
         <thead>
             <tr>
