--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Users List{% endblock %}
 
 {% block body %}
-    <h1>Users List</h1>
+    <h1><li class="fa fa-user"></li> Users List</h1>
     <table class="table" id="dataTable">
         <thead>
             <tr>
