--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -132,15 +132,15 @@
                                             <h3>Based on {{ article.reviews| length }} Reviews</h3>
                                             <ul class="list">
                                                 <li>5 Star <i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i><i
-                                                                class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i> (01)</li>
+                                                                class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i> ({{ star5|length }})</li>
                                                 <li>4 Star <i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i><i
-                                                                class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: gray"></i> (01)</li>
+                                                                class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: gray"></i> ({{ star4|length }})</li>
                                                 <li>3 Star <i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i><i
-                                                                class="fa fa-star" style="color: gray"></i><i class="fa fa-star" style="color: gray"></i> (01)</li>
+                                                                class="fa fa-star" style="color: gray"></i><i class="fa fa-star" style="color: gray"></i> ({{ star3|length }})</li>
                                                 <li>2 Star <i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: gray"></i><i
-                                                                class="fa fa-star" style="color: gray"></i><i class="fa fa-star" style="color: gray"></i> (01)</li>
+                                                                class="fa fa-star" style="color: gray"></i><i class="fa fa-star" style="color: gray"></i> ({{ star2|length }})</li>
                                                 <li>1 Star <i class="fa fa-star" style="color: yellow"></i><i class="fa fa-star" style="color: gray"></i><i class="fa fa-star" style="color: gray"></i><i
-                                                                class="fa fa-star" style="color: gray"></i><i class="fa fa-star" style="color: gray"></i> (01)</li>
+                                                                class="fa fa-star" style="color: gray"></i><i class="fa fa-star" style="color: gray"></i> ({{ star1|length }})</li>
                                             </ul>
                                         </div>
                                     </div>
