--- a/templates/admin/home_admin.html.twig
+++ b/templates/admin/home_admin.html.twig
@@ -90,7 +90,7 @@
         </div>
         <div class="card mb-3">
             <div class="card-header">
-                <i class="fas fa-table"></i>
+                <i class="fas fa-user-circle"></i>
                 Clients</div>
             <div class="card-body">
                 <div class="table-responsive">
