--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -66,6 +66,8 @@
                 <i class="fas fa-user-circle fa-fw"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                <a href="" class="dropdown-item">Connected as {{ app.user.LoginName }}</a>
+                <div class="dropdown-divider"></div>
                 {% if not is_granted('ROLE_USER') %}
                 <a class="dropdown-item" href="#">Login</a>
                 {% else %}
@@ -89,13 +91,18 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ path('user_index') }}">
-                <i class="fas fa-fw fa-chart-area"></i>
+                <i class="fas fa-user"></i>
                 <span>Users</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ path('article_index') }}">
-                <i class="fas fa-fw fa-table"></i>
+                <i class="fas fa-luggage-cart"></i>
                 <span>Articles</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('orders') }}">
+                <i class="fas fa-clipboard-list"></i>
+                <span>Orders</span></a>
         </li>
     </ul>
 
