--- a/templates/email/welcome.html.twig
+++ b/templates/email/welcome.html.twig
@@ -62,7 +62,7 @@
                 Make sure to browse our products !
             </p>
             <p class="block text-center">
-                <a href="{{ absolute_url('home') }}" class="btn">Products</a>
+                <a href="{{ absolute_url('/') }}" class="btn">Products</a>
             </p>
         </div>
         <div class="footer">
