--- a/templates/order/order.html.twig
+++ b/templates/order/order.html.twig
@@ -28,12 +28,13 @@
                     <div class="details_item">
                         <h4>Shipping Address</h4>
                         <ul class="list">
-                            <li><span>Fullname</span> : {{ client.fullname }}</li>
-                            <li><span>Address 1</span> : {{ client.address1 }}</li>
-                            <li><span>Address 2</span> : {{ client.address2 }}</li>
-                            <li><span>City </span> : {{ client.city }}</li>
-                            <li><span>State</span> : {{ client.state }}</li>
-                            <li><span>Post Code</span> : {{ client.postcode }}</li>
+                            <li><span>Fullname</span> : {{ commande.client.fullname }}</li>
+                            <li><span>Address 1</span> : {{ commande.client.address1 }}</li>
+                            <li><span>Address 2</span> : {{ commande.client.address2 }}</li>
+                            <li><span>Address 2</span> : {{ commande.client.country }}</li>
+                            <li><span>City </span> : {{ commande.client.city }}</li>
+                            <li><span>State</span> : {{ commande.client.state }}</li>
+                            <li><span>Post Code</span> : {{ commande.client.postcode }}</li>
                         </ul>
                     </div>
                 </div>
