--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -89,11 +89,13 @@
                 <span>Dashboard</span>
             </a>
         </li>
+        {% if not is_granted('ROLE_SUPER_ADMIN') %}
         <li class="nav-item">
             <a class="nav-link" href="{{ path('user_index') }}">
                 <i class="fas fa-user"></i>
                 <span>Users</span></a>
         </li>
+        {% endif %}
         <li class="nav-item">
             <a class="nav-link" href="{{ path('article_index') }}">
                 <i class="fas fa-luggage-cart"></i>
