--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -89,7 +89,7 @@
                 <span>Dashboard</span>
             </a>
         </li>
-        {% if not is_granted('ROLE_SUPER_ADMIN') %}
+        {% if is_granted('ROLE_SUPER_ADMIN') %}
         <li class="nav-item">
             <a class="nav-link" href="{{ path('user_index') }}">
                 <i class="fas fa-user"></i>
