--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -12,16 +12,20 @@
             <th>Status</th>
             <th>Order Date</th>
             <th>Order Total</th>
+            <th>actions</th>
         </tr>
         </thead>
         <tbody>
         {% for order in orders %}
             <tr>
-                <td><a href="{{ path('orderDetail',{id : order.id}) }}">{{ order.id }}</a></td>
+                <td>{{ order.id }}</td>
                 <td>{{ order.client.fullname }}</td>
                 <td>{{ order.status }}</td>
                 <td>{{ order.orderDate|date("Y/m/d H:m:s") }}</td>
-                <td>{{ order.orderTotal }}</td>
+                <td>{{ order.orderTotal }} $</td>
+                <td>
+                    <a href="{{ path('orderDetail',{id : order.id}) }}" class="btn btn-primary">Details</a>
+                </td>
             </tr>
         {% else %}
             <tr>
