--- a/templates/admin/clientOrder.html.twig
+++ b/templates/admin/clientOrder.html.twig
@@ -1,9 +1,9 @@
 {% extends 'baseAdmin.html.twig' %}
 
-{% block title %}Clients Orders{% endblock %}
+{% block title %}Orders{% endblock %}
 
 {% block body %}
-    <h1><li class="fas fa-clipboard-list"></li> Clients Orders</h1>
+    <h1><li class="fas fa-clipboard-list"></li> Orders</h1>
     <table class="table" id="dataTable">
         <thead>
         <tr>
