--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -1,32 +1,35 @@
 
 {{ form_start(form) }}
-<div class="container bootstrap snippet">
 <div class="tab-content">
     <div class="tab-pane active" id="home">
         <hr>
         <div class="form-group">
-
+            <div class="col-sm-6">
             {{ form_row(form.loginName,{'label' : 'Username', 'attr' : {'placeholder' : 'Username ....','class' : 'form-control'}}) }}
-
+            </div>
         </div>
         <div class="form-group">
-
+            <div class="col-sm-6">
                 {{ form_row(form.email,{'label' : 'Email', 'attr' : {'placeholder' : 'Email ....','class' : 'form-control'}}) }}
-
+            </div>
         </div>
         <div class="form-group">
-
+            <div class="col-sm-6">
                 {{ form_row(form.roles,{'label' : 'Roles', 'attr' : {'placeholder' : 'Role ....','class' : 'form-control'}}) }}
-
+            </div>
         </div>
         <div class="form-group">
-
-                {{ form_row(form.password,{'label' : 'Password', 'attr' : {'placeholder' : 'Password ....','class' : 'form-control'}}) }}
-
+            <div class="col-sm-6">
+                {{ form_row(form.password.first,{'label' : 'Password', 'attr' : {'placeholder' : 'Password ....','class' : 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-6">
+                {{ form_row(form.password.second,{'label' : 'Repeat Password', 'attr' : {'placeholder' : 'Confirm ....','class' : 'form-control'}}) }}
+            </div>
         </div>
         <button class="btn btn-success">{{ button_label|default('Save') }}</button>
         {{ form_end(form) }}
 
     </div>
-</div>
 </div>
