--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -68,6 +68,8 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                     <a href="" class="dropdown-item">Connected as {{ app.user.LoginName }}</a>
                     <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{{ path('accountUser',{id : app.user.id}) }}">Account</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ path('app_logout') }}" data-toggle="modal" data-target="#logoutModal">Logout</a>
             </div>
         </li>
