--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-6">
-                {{ form_row(form.roles,{'label' : 'Roles', 'attr' : {'placeholder' : 'Role ....','class' : 'form-control'}}) }}
+                {{ form_row(form.roles,{'label' : 'Roles', 'attr' : {'placeholder' : 'Role ....','class' : 'form-check-inline'}}) }}
             </div>
         </div>
         <div class="form-group">
