--- a/templates/admin/clientDetail.html.twig
+++ b/templates/admin/clientDetail.html.twig
@@ -56,7 +56,7 @@
             <div class="form-group row">
                 <label for="birthdate" class="col-4 col-form-label">Date Of Birth</label>
                 <div class="col-8">
-                    {{ form_row(form.birthdate,{'label' : false, 'attr' : {'class' : 'form-control'}}) }}
+                    {{ form_row(form.birthdate,{'label' : false}) }}
                 </div>
             </div>
             <div class="form-group row">
