--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,6 +78,9 @@
                                 {% if not is_granted('ROLE_USER') %}
                                 <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Login/Register</a></li>
                                 {% else %}
+                                    {% if is_granted('ROLE_ADMIN') %}
+                                        <li class="nav-item"><a class="nav-link" href="{{ path('admin') }}">Admin Dashboard</a></li>
+                                    {% endif %}
                                 <li class="nav-item"><a class="nav-link" href="{{ path('account') }}">Profile</a></li>
                                 <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Logout</a></li>
                                 {% endif %}
@@ -122,7 +125,6 @@
     </div>
 </section>
 <!-- End Banner Area -->
-<div class="container"></div>
 <hr>
 {% block body %}
 {% endblock %}
