--- a/templates/order/order.html.twig
+++ b/templates/order/order.html.twig
@@ -45,6 +45,7 @@
                     <table class="table">
                         <thead>
                         <tr>
+                            <th scope="col">Image</th>
                             <th scope="col">Product</th>
                             <th scope="col">Quantity</th>
                             <th scope="col">Total</th>
@@ -53,6 +54,9 @@
                         <tbody>
                         {% for detail in details %}
                         <tr>
+                            <td>
+                                <p><img src="/uploads/{{ detail.articles.image }}" width="40" height="40"></p>
+                            </td>
                             <td>
                                 <p>{{ detail.articles.nom }}</p>
                             </td>
@@ -67,6 +71,9 @@
                         <tr>
                             <td>
                                 <h4>Total</h4>
+                            </td>
+                            <td>
+                                <h5></h5>
                             </td>
                             <td>
                                 <h5></h5>
