--- a/templates/home/account.html.twig
+++ b/templates/home/account.html.twig
@@ -2,8 +2,8 @@
 
 {% block title %}Profile{% endblock %}
 
-{% block stylesheets %}
-{% endblock %}
+{% block stylesheets %}{% endblock %}
+
 {% block route %}
     Profile
 {% endblock %}
@@ -178,10 +178,6 @@
                                             {% endfor %}
                                             </tbody>
                                         </table>
-                                        <div class="navigation">
-                                            {{ knp_pagination_render(commandes) }}
-                                        </div>
-
                                     </div>
                                 </div>
 
@@ -199,7 +195,7 @@
         </div>
 
     </div>
-    <br><br><br><br>
+    <br><br>
 
 {% endblock %}
 
