--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -98,6 +98,10 @@
     color: #44a038;" class="aymen">In Stock</span>
                                         {% endif %}
                                         <p class="desc">{{ article.description }}</p>
+                                        <div class="rating-wrap">
+                                            <div class="label-rating">{{ article.reviews|length }} Reviews</div>
+                                            <div class="label-rating">{{ article.details|length }} Orders </div>
+                                        </div>
                                     </figcaption>
                                     <div class="bottom-wrap">
                                         {% if article.quantite > 0 %}
@@ -124,6 +128,56 @@
             </div>
 
         </div>
+
+        <!-- start features Area -->
+        <section class="features-area section_gap">
+            <div class="container">
+                <div class="row features-inner">
+                    <!-- single features -->
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="single-features">
+                            <div class="f-icon">
+                                <img src="img/features/f-icon1.png" alt="">
+                            </div>
+                            <h6>Free Delivery</h6>
+                            <p>Free Shipping on all order</p>
+                        </div>
+                    </div>
+                    <!-- single features -->
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="single-features">
+                            <div class="f-icon">
+                                <img src="img/features/f-icon2.png" alt="">
+                            </div>
+                            <h6>Return Policy</h6>
+                            <p>Free Shipping on all order</p>
+                        </div>
+                    </div>
+                    <!-- single features -->
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="single-features">
+                            <div class="f-icon">
+                                <img src="img/features/f-icon3.png" alt="">
+                            </div>
+                            <h6>24/7 Support</h6>
+                            <p>Free Shipping on all order</p>
+                        </div>
+                    </div>
+                    <!-- single features -->
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="single-features">
+                            <div class="f-icon">
+                                <img src="img/features/f-icon4.png" alt="">
+                            </div>
+                            <h6>Secure Payment</h6>
+                            <p>Free Shipping on all order</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end features Area -->
+
 
     </div>
 
