bottom page design

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -177,6 +177,24 @@
             </div>
         </section>
         <!-- end features Area -->
+        <section class="bottom-footer col-xs-12"><h5 class="major" style="position: relative;border-top: solid 4px #e0e0e0;">
+                <span style="top: -0.775em;
+    padding: 0 1.5em 0 1.5em;
+    left: 37%;
+    background: #fff;
+    position: relative;
+    display: inline-block;
+    color: black;
+    font-size: large;"> Modes de paiement disponibles</span>
+            </h5>
+            <ul style="margin: -10px auto;width: 73%;position: relative;left: 15%;">
+                <li style="display: inline;margin: 0 13px;"><img src="https://web-assets-mk.s3.amazonaws.com/themes/onemarket/img/cash-livraison.png" alt="cash a la livraison" style="margin-right: -10px;"></li>
+                <li style="display: inline;margin: 0 13px;"><img src="https://web-assets-mk.s3.amazonaws.com/themes/onemarket/img/visa.png" alt="visa"></li>
+                <li style="display: inline;margin: 0 13px;"><img src="https://web-assets-mk.s3.amazonaws.com/themes/onemarket/img/mastercard.png" alt="mastercard"></li>
+                <li style="display: inline;margin: 0 13px;"><img src="https://web-assets-mk.s3.amazonaws.com/themes/onemarket/img/cib.png" alt="CIB" style="margin-right: -10px;"></li>
+                <li style="display: inline;margin: 0 13px;"><img src="https://web-assets-mk.s3.amazonaws.com/themes/onemarket/img/master-secure.png" alt="master secure" style="margin-right: -20px;"></li>
+                <li style="display: inline;margin: 0 13px;"><img src="https://web-assets-mk.s3.amazonaws.com/themes/onemarket/img/verified-by-visa.png" alt="verified visa"></li></ul>
+        </section>
 
 
     </div>
