--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -120,7 +120,7 @@
                         <p>Aucun produit !</p>
                     {% endif %}
                 </div>
-                <div class="pagination active">
+                <div class="pagination">
                     {{ knp_pagination_render(articles) }}
                 </div>
 
